# cappa_gazebo

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.sh
launch/: cappadocia.launch
models/cappadocia/: model.config  model.sdf
models/cappadocia/meshes/: muze1M.mtl
worlds/: cappadocia.world
