<?xml version="1.0"?>
<package format="2">
  <name>cappa_gazebo</name>
  <version>0.0.1</version>
  <description>
    Launch files and other resources for simulating Robots in Cappadocia, Goreme Open Air Museum
  </description>

  <maintainer email="altineller@gmail.com">Can Altineller</maintainer>
  <author email="altineller@gmail.com">Can Altineller</author>

  <license>GPLv3</license>

  <url type="repository">https://github.com/altineller/cappa_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>

  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
 
</package>
